update jwt
